# invest-strat

./: .gitignore  README.md
api/: .gitignore  pyproject.toml
api/invest_strat/: main.py
api/invest_strat/controllers/: contributions_schedule_controller.py  journal_entry_controller.py
api/invest_strat/models/: account_entry.py  journal_entry.py
api/invest_strat/utils/: historical_plots.py
data/: AAPL-daily-1980.csv  AMZN-daily-1997.csv  BRK-B-daily-1996.csv  MSFT-daily-1986.csv  SPX-daily-1927.csv  TSLA-daily-2010.csv  VFIAX-daily-2000.csv
invest_strat/db/: memory.py
invest_strat/models/: account.py  contributions_schedule.py
invest_strat/routes/: api.py
