[tool.poetry]
name = "invest-strat"
version = "0.1.0"
description = ""
authors = ["Joseph Jose <joseph.a.jose@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
